--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -1,11 +1,10 @@
-
 {
   "intro": {
     "welcome": "La revolución\nha llegado",
     "tagline": "Multiplica tu vida",
-    "experience": "Vive en hoteles", 
+    "experience": "Vive en hoteles",
     "style": "Vive con estilo",
-    "community": "Conoce personas\nafines",
+    "community": "Conoce\npersonas afines",
     "passion": "Disfruta\ntus pasiones"
   }
 }
